--- a/Assets/Runtime/FiveSQD.WebVerse.asmdef
+++ b/Assets/Runtime/FiveSQD.WebVerse.asmdef
@@ -7,7 +7,8 @@
         "GUID:796f11cc32c1c5442bfe7988dcfbe78a",
         "GUID:cadc04802aa07a046856a14dd4648e81",
         "GUID:774f0e7b520e24644b448f5ac7fa5d94",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:d9c143f5f90809e41835a785e1aafc2e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
