Disabling automatic running of test and build workflow for now. Requires proprietary packages, and tests/builds will be run manually/on a private repository for now.

--- a/.github/workflows/testandbuild.yml
+++ b/.github/workflows/testandbuild.yml
@@ -4,9 +4,9 @@ name: WebVerse Runtime Unit Test Runner and Builder
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+##  push:
+##    branches:
+##      - main
   pull_request:
 
 permissions:
