Updating to use Mono SQLite (as other one would not build with IL2CPP.

--- a/Assets/Runtime/FiveSQD.WebVerse.asmdef
+++ b/Assets/Runtime/FiveSQD.WebVerse.asmdef
@@ -17,7 +17,8 @@
     "precompiledReferences": [
         "Jint.dll",
         "Esprima.dll",
-        "Newtonsoft.Json.dll"
+        "Newtonsoft.Json.dll",
+        "System.Data.SQLite.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
