--- a/Assets/Runtime/LocalStorage/FiveSQD.WebVerse.LocalStorage.asmdef
+++ b/Assets/Runtime/LocalStorage/FiveSQD.WebVerse.LocalStorage.asmdef
@@ -9,7 +9,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "System.Data.SQLite.dll"
+        "Mono.Data.Sqlite.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
