--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,23 +1,24 @@
 {
   "dependencies": {
-    "com.atteneder.draco": "https://github.com/Five-Squared-Interactive/DracoUnity.git",
     "com.siccity.gltfutility": "https://github.com/Five-Squared-Interactive/GLTFUtility.git",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.burst": "1.8.12",
+    "com.unity.cloud.draco": "5.0.2",
+    "com.unity.cloud.draco.webgl-2022": "1.0.0",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.27",
+    "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.7",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualscripting": "1.9.2",
     "com.unity.xr.hands": "1.3.0",
-    "com.unity.xr.interaction.toolkit": "2.5.2",
+    "com.unity.xr.interaction.toolkit": "2.5.3",
     "com.unity.xr.management": "4.4.1",
     "com.unity.xr.openxr": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
