--- a/Assets/Runtime/FiveSQD.WebVerse.asmdef
+++ b/Assets/Runtime/FiveSQD.WebVerse.asmdef
@@ -10,7 +10,10 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:d9c143f5f90809e41835a785e1aafc2e",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:e40ba710768534012815d3193fa296cb"
+        "GUID:e40ba710768534012815d3193fa296cb",
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
+        "GUID:dc960734dc080426fa6612f1c5fe95f3",
+        "GUID:8f07e33567e0ee542b40769c456c6b53"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
