Adding automobile and airplane entity, VEML 2.4.

--- a/Assets/Runtime/FiveSQD.WebVerse.asmdef
+++ b/Assets/Runtime/FiveSQD.WebVerse.asmdef
@@ -14,7 +14,9 @@
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
         "GUID:dc960734dc080426fa6612f1c5fe95f3",
         "GUID:8f07e33567e0ee542b40769c456c6b53",
-        "GUID:cd6342e5cfb9a4035838bb5b11cd5ce0"
+        "GUID:cd6342e5cfb9a4035838bb5b11cd5ce0",
+        "GUID:c76e28da8ce572043b1fb2da95817e18",
+        "GUID:4333e1ebda3404646a79cf687ca3e9e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
