WebVerse WorldEngine renamed to StraightFour, adding avatar entity updating, enhancing UI element entity customization, VEML 3.0, adding desktop locomotion flags.

--- a/Assets/Runtime/Handlers/ImageHandler/Tests/FiveSQD.WebVerse.Handlers.Image.Tests.asmdef
+++ b/Assets/Runtime/Handlers/ImageHandler/Tests/FiveSQD.WebVerse.Handlers.Image.Tests.asmdef
@@ -6,8 +6,8 @@
         "UnityEditor.TestRunner",
         "FiveSQD.WebVerse",
         "FiveSQD.WebVerse.Utilities",
-        "FiveSQD.WebVerse.WorldEngine",
-        "FiveSQD.WebVerse.LocalStorage"
+        "FiveSQD.WebVerse.LocalStorage",
+        "FiveSQD.StraightFour"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
